--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://telmorvf.github.io/git@github.com:telmorvf/P014-FindSecretWord_React.git",
+  "homepage": "https://telmorvf.github.io/P014-FindSecretWord_React/",
   "name": "react_secret-word",
   "private": true,
   "version": "0.0.0",
